@@ -126,9 +126,9 @@ $(objpfx)test-ldouble.o: $(objpfx)libm-test.stmp
 $(objpfx)test-ildoubl.o: $(objpfx)libm-test.stmp
 endif
 
-CFLAGS-test-float.c = -fno-inline -ffloat-store -fno-builtin -frounding-math
-CFLAGS-test-double.c = -fno-inline -ffloat-store -fno-builtin -frounding-math
-CFLAGS-test-ldouble.c = -fno-inline -ffloat-store -fno-builtin -frounding-math
+CFLAGS-test-float.c = -fno-inline -ffloat-store -fno-builtin
+CFLAGS-test-double.c = -fno-inline -ffloat-store -fno-builtin
+CFLAGS-test-ldouble.c = -fno-inline -ffloat-store -fno-builtin
 CFLAGS-test-tgmath.c = -fno-builtin
 # The following testcase uses very long lines (>3 million), so it may take a
 # while to compile it. See: http://llvm.org/bugs/show_bug.cgi?id=14106 and
@@ -136,14 +136,12 @@ CFLAGS-test-tgmath.c = -fno-builtin
 CFLAGS-test-tgmath2.c = -fno-builtin
 CFLAGS-test-tgmath-ret.c = -fno-builtin
 CFLAGS-test-powl.c = -fno-builtin
-CFLAGS-test-test-fenv.c = -frounding-math
-CFLAGS-test-misc.c = -frounding-math
 CPPFLAGS-test-ifloat.c = -U__LIBC_INTERNAL_MATH_INLINES -D__FAST_MATH__ \
-			 -DTEST_FAST_MATH -fno-builtin -frounding-math
+			 -DTEST_FAST_MATH -fno-builtin
 CPPFLAGS-test-idouble.c = -U__LIBC_INTERNAL_MATH_INLINES -D__FAST_MATH__ \
-			 -DTEST_FAST_MATH -fno-builtin -frounding-math
+			  -DTEST_FAST_MATH -fno-builtin
 CPPFLAGS-test-ildoubl.c = -U__LIBC_INTERNAL_MATH_INLINES -D__FAST_MATH__ \
-			  -DTEST_FAST_MATH -fno-builtin -frounding-math
+			  -DTEST_FAST_MATH -fno-builtin
 
 
 # The -lieee module sets the _LIB_VERSION_ switch to IEEE mode
